add demo for Guice and test